# submit-bits

./: .gitignore  README.md  call_submit.py  config.toml  pyproject.toml  requirements.txt
.github/workflows/: test-bitstream.yml
jyd_client/: cli.py  config.py  db.py  errors.py  led_ascii.py  logging_utils.py  models.py  parser.py  remote.py  runner.py  serial_reader.py
scripts/: led_ascii.py  stability_test.py  sweep_fpgas.py
